--- a/OpenLGTV_BCM/trunk/Changelog
+++ b/OpenLGTV_BCM/trunk/Changelog
@@ -9,6 +9,8 @@ OpenLGTV BCM Changelog
     * ADD: posibility to use custom msdl and web browser certificates from /mnt/user/netcast/opt dir
     * ADD: PIN authorization for local (on-screen) WebUI access - something like parental lock, authorization cgi can be used to PIN-lock any web page
     * ADD: EtherWake WebUI submenu with possibility to add/edit/delete devices to wake (via 'Wake' button or to wake on boot)
+    * ADD: unified for all platforms info.sh script by mmm4m5m from LGMOD S7
+    * ADD: support for future OpenLGTV_BCM/extroot.tar.gz package and OpenLGTV_BCM/extroot dir on USB storage partititions (should be NTFS formated)
     * CHANGE: time for USB mouse detection on boot raised from 18 to 19 seconds - less probability to get mouse not detected
     * CHANGE: Network Shares Mount and Ether-Wake performance improvements in both WebUI and boot scripts
     * CHANGE: rc.firewall behavior change to drop routes instead of binding local interface IPs
