OpenLGTV BCM: fix NetCast icons removal when disabled in WebUI, rc.* scripts cleanup
git-svn-id: http://svn.openlgtv.org.ru@905 6f01ea5f-641d-df11-ac65-003048919802

--- a/OpenLGTV_BCM/trunk/Changelog
+++ b/OpenLGTV_BCM/trunk/Changelog
@@ -3,6 +3,7 @@ OpenLGTV BCM Changelog
 0.5.0-beta2 [NOT RELEASED YET]:
 
     * FIX: DLNA servers/shares visibility
+    * FIX: OpenLGTV BCM, WWW, Yahoo Widgets icons removal when disabled in WebUI
     * ADD: VOB, MPEG, DAT, ASF, MTS file extensions for FileManager playback
     * ADD: support for both lower and uppercase file extensions for FileManager playback (but mixed case extensions are not supported)
     * ADD: precache parameter for Network Shares to cache directories list (workaround for invisible dirs on some NFS shares)
