OpenLGTV BCM: 0.5.0-beta2 release, 4KB free space
git-svn-id: http://svn.openlgtv.org.ru@916 6f01ea5f-641d-df11-ac65-003048919802

--- a/OpenLGTV_BCM/trunk/Changelog
+++ b/OpenLGTV_BCM/trunk/Changelog
@@ -1,6 +1,6 @@
 OpenLGTV BCM Changelog
 
-0.5.0-beta2 [NOT RELEASED YET]:
+0.5.0-beta2:
 
     * FIX: DLNA servers/shares visibility
     * FIX: OpenLGTV BCM, WWW, Yahoo Widgets icons removal when disabled in WebUI
