OpenLGTV BCM: start tftpd earlier - even before network setup (forgot to upload rc.tftpd - still not there), improve udhcpc script to use default IP address instead of 0.0.0.0 - helpful in case of set DHCP but no DHCP servers around, few fixes in WebUI and FileManager (text/log and image files viewer compatibile with remote control)
git-svn-id: http://svn.openlgtv.org.ru@923 6f01ea5f-641d-df11-ac65-003048919802

--- a/OpenLGTV_BCM/trunk/Changelog
+++ b/OpenLGTV_BCM/trunk/Changelog
@@ -1,5 +1,14 @@
 OpenLGTV BCM Changelog
 
+0.5.0-beta3 [NOT RELEASED YET]:
+
+    * FIX: boot if any of netcast_config_add_* options was disabled and NetCast config.xml is too big to parse
+    * FIX: udhcpc script now sets default IP address before making requests instead of 0.0.0.0 when configuration set to DHCP but no DHCP servers around
+    * FIX: FileManager link in WebUI
+    * FIX: back from playback in FileManager had mixed paths
+    * ADD: TFTP server service for early boot recovery - uploads authenticated by TV serial number
+    * ADD: text files and images viewer in FileManager that's usable with remote control
+
 0.5.0-beta2:
 
     * FIX: DLNA servers/shares visibility
