OpenLGTV BCM: tftpd fixes (/etc/passwd not available at the time of starting service), stopping TFTP service after end of 3rd stage check, Yavido alternative improvements
git-svn-id: http://svn.openlgtv.org.ru@927 6f01ea5f-641d-df11-ac65-003048919802

--- a/OpenLGTV_BCM/trunk/Changelog
+++ b/OpenLGTV_BCM/trunk/Changelog
@@ -6,8 +6,9 @@ OpenLGTV BCM Changelog
     * FIX: udhcpc script now sets default IP address before making requests instead of 0.0.0.0 when configuration set to DHCP but no DHCP servers around
     * FIX: FileManager link in WebUI
     * FIX: back from playback in FileManager had mixed paths
-    * ADD: TFTP server service for early boot recovery - uploads authenticated by TV serial number
+    * ADD: TFTP server service for early boot recovery (3 stages) - uploads need to be authenticated by TV serial number
     * ADD: text files and images viewer in FileManager that's usable with remote control
+    * UPDATE: improve Yavido alternative with bigger font, arrows navigation and shorter refresh time
 
 0.5.0-beta2:
 
