OpenLGTV BCM: add Drive{5,6} mountpoints for both USB1 and USB2, finish other filesystems (EXT3, [EXT4], JFS,...) automounting, support for OpenLGTV_BCM, Yahoo Widgets, etc. on partitions other than VFAT and NTFS
git-svn-id: http://svn.openlgtv.org.ru@933 6f01ea5f-641d-df11-ac65-003048919802

--- a/OpenLGTV_BCM/trunk/Changelog
+++ b/OpenLGTV_BCM/trunk/Changelog
@@ -8,6 +8,9 @@ OpenLGTV BCM Changelog
     * FIX: back from playback in FileManager had mixed paths
     * ADD: TFTP server service for early boot recovery (3 stages) - uploads need to be authenticated by TV serial number
     * ADD: text files and images viewer in FileManager that's usable with remote control
+    * ADD: /mnt/usb{1,2}/Drive{5,6} mount points
+    * ADD: support for EXT3, JFS, [ EXT4 via additional kernel modules ], other supported filesystems by kernel automounting on hotplug
+    * ADD: support for OpenLGTV_BCM dir, Yahoo Widgets, etc. on JFS, EXT3/[4],... formated partitions
     * UPDATE: improve Yavido alternative with bigger font, arrows navigation and shorter refresh time
 
 0.5.0-beta2:
