--- a/OpenLGTV_BCM/trunk/Changelog
+++ b/OpenLGTV_BCM/trunk/Changelog
@@ -12,8 +12,9 @@ OpenLGTV BCM Changelog
     * ADD: support for EXT3, JFS, [ EXT4 via additional kernel modules ], other supported filesystems by kernel automounting on hotplug
     * ADD: support for OpenLGTV_BCM dir, Yahoo Widgets, etc. on JFS, EXT3/[4],... formated partitions
     * ADD: support for storage devices connected to USB HUBs (but playback possibility from them is via FileManager only)
-    * ADD: OPENRELEASE bound key actions in Remote Control web interface
     * ADD: add directory, M3U and PLS playlists automated playback for local files in FileManager
+    * ADD: customizable refresh/load time for next files from the list/dir in FileManager using numbered buttons on remote control
+    * ADD: OPENRELEASE bound key actions in Remote Control web interface
     * UPDATE: improve Yavido alternative with bigger font, arrows navigation and shorter refresh time
 
 0.5.0-beta2:
