--- a/OpenLGTV_BCM/trunk/Changelog
+++ b/OpenLGTV_BCM/trunk/Changelog
@@ -2,6 +2,7 @@ OpenLGTV BCM Changelog
 
 0.5.0-??? [NOT RELEASED YET]:
     * ADD: image zooming/resizing using 'OK' button (or Enter on PC) in FileManager
+    * ADD: button to view last status of copy/move action after action was detached to background in FileManager
     * CHANGE: last_played.info file is now stored in /tmp instead of played dir location - no need to have write access to mounted shares for slideshow/dir playback in FileManager
     * CHANGE: move haserl from /bin to /usr/bin for better CGI portability (compatibility with LGMOD S7)
 
