OpenLGTV BCM: remove mtdinfo.sh
git-svn-id: http://svn.openlgtv.org.ru@973 6f01ea5f-641d-df11-ac65-003048919802

--- a/OpenLGTV_BCM/trunk/Changelog
+++ b/OpenLGTV_BCM/trunk/Changelog
@@ -10,6 +10,7 @@ OpenLGTV BCM Changelog
     * CHANGE: FileManager: coloured (brown) non-local mount points (ie. mounted USB storage partitions, NFS/CIFS network shares)
     * CHANGE: move haserl from /bin to /usr/bin for better CGI portability (compatibility with LGMOD S7)
     * CHANGE: mount options for VFAT/NTFS/EXT3/EXT4 got changed to use at least 'noatime' to make less writes to USB storage and keep permissions on NTFS
+    * REMOVE: mtdinfo.sh for space reason - it's code is in info.sh already
 
 0.5.0-beta3 [2011.12.24]:
 
