--- a/OpenLGTV_BCM/trunk/Changelog
+++ b/OpenLGTV_BCM/trunk/Changelog
@@ -2,6 +2,9 @@ OpenLGTV BCM Changelog
 
 0.5.0-??? [NOT RELEASED YET]:
     * FIX: FileManager: copy/move/erase actions when mouse was used for file/dir navigation
+    * FIX: FileManager: better handling of dirs with special characters
+    * FIX: FileManager: get rid of 'awk' in free/total space counting and proper handle 'df' multiline output for space info
+    * FIX: FileManager: crop full path if it doesn't fit panel width
     * ADD: FileManager: image zooming/resizing using 'OK' button (or Enter on PC)
     * ADD: FileManager: button to view last status of copy/move action after action was detached to background
     * ADD: FileManager: color dir names when they are not local mount points (mounted USB storage partitions or NFS/CIFS network shares)
