OpenLGTV BCM: FileManager: use more userfriendly metrics for size on copy/move status (B/KB/MB/GB), fallback with r/o remount for NTFS if r/w wont succeed
git-svn-id: http://svn.openlgtv.org.ru@977 6f01ea5f-641d-df11-ac65-003048919802

--- a/OpenLGTV_BCM/trunk/Changelog
+++ b/OpenLGTV_BCM/trunk/Changelog
@@ -5,6 +5,7 @@ OpenLGTV BCM Changelog
     * FIX: FileManager: better handling of dirs with special characters
     * FIX: FileManager: get rid of 'awk' in free/total space counting and proper handle 'df' multiline output for space info
     * FIX: FileManager: crop full path if it doesn't fit panel width
+    * FIX: fallback with NTFS partitions remounting as read-only when remounting read-write wont succeed (problems with filesystem)
     * ADD: FileManager: image zooming/resizing using 'OK' button (or Enter on PC)
     * ADD: FileManager: button to view last status of copy/move action after action was detached to background
     * ADD: FileManager: color dir names when they are not local mount points (mounted USB storage partitions or NFS/CIFS network shares)
