LGMOD_S7: update S6 asix driver
git-svn-id: http://svn.openlgtv.org.ru@1233 6f01ea5f-641d-df11-ac65-003048919802

--- a/lgmod_s7/changelog.txt
+++ b/lgmod_s7/changelog.txt
@@ -112,6 +112,10 @@ Changelog 1.0.7 :
 * Fixed unmount before reboot. Unmount before poweroff (remote control) is not solved (yet)
   (If you write to USB drive - do 'sync' or 'eject' before poweroff)
 
+Changelog 1.7.15 :
+==================
+* ASIX driver
+ * fix authentic check
 
 Changelog 1.7.14 :
 ==================
